--- a/index_01.html
+++ b/index_01.html
@@ -50,12 +50,20 @@
         padding: 12px;
         background-color: white;
       }
+      #luk {
+        position: fixed;
+        padding: 1em;
+        font-size: 1.7em;
+        font-weight: bolder;
+        color: white;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
     <section id="popup">
       <div id="luk">luk</div>
-      <article>
+      <article class="popup_article">
         <img src="" alt="" />
         <h2></h2>
         <p class="popup_beskrivelse"></p>
@@ -140,9 +148,25 @@
               ret.kortbeskrivelse;
             klon.querySelector(".pris").textContent =
               "Pris: " + ret.pris + ",-";
+            klon
+              .querySelector("article")
+              .addEventListener("click", () => visDetaljer(ret));
             data.appendChild(klon);
           }
         });
+        function visDetaljer(ret) {
+          console.log(ret);
+          popup.style.display = "block";
+          popup.querySelector("h2").textContent = ret.navn;
+          popup.querySelector("img").src =
+            "medium/" + ret.billednavn + "-md.jpg";
+          popup.querySelector(".popup_beskrivelse").textContent =
+            ret.langbeskrivelse;
+          popup.querySelector(".popup_pris").textContent =
+            "Pris: " + ret.pris + ",-";
+          popup.querySelector(".popup_region").textContent =
+            ret.oprindelsesregion;
+        }
       }
     </script>
   </body>
