--- a/index_babushka.html
+++ b/index_babushka.html
@@ -187,7 +187,9 @@
         <br />
         Mandag-fredag: 10:30-22:00
         <br />
-        Lørdag: 12:00-23:00 br Søndag: Lukket
+        Lørdag: 12:00-23:00
+        <br />
+        Søndag: Lukket
       </p>
     </footer>
     <script>
